--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "primevue": "^3.45.0",
     "primeicons": "^6.0.1",
     "primeflex": "^3.3.1",
-    "vue": "^3.4.0"
+    "vue": "^3.4.0",
+    "date-fns": "^2.30.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.0",
